calculator and to-do list demos are not embedded into the Sanbox demo.  this will be the model going forward trivial demos.

--- a/example/sandbox/sandbox.html
+++ b/example/sandbox/sandbox.html
@@ -44,7 +44,11 @@ Begin Buckshot Templates
     <border minHeight='300' halign='stretch' borderthickness='1' bordercolor='SteelBlue' padding='5'>
       <stack>       
      	<treeview treenodeselected='selection_handler'>
-	     <treenode childvisibility='visible' header='Elements' tag=''>
+ 		 <treenode header='App Demos' childvisibility='visible'>
+            <treenode header='Calculator' tag='app.calc' />
+            <treenode header='Simple Todo List' tag='app.todo' />
+	     </treenode>
+	     <treenode header='Elements' tag=''>
 	     	<treenode header='TextBlock' tag='textblock' />
 	     	<treenode header='Stack' tag='stack' />
 	     	<treenode header='Border' tag='border' />
