--- a/test/tests.html
+++ b/test/tests.html
@@ -9,7 +9,7 @@
 		
 	<!-- Buckshot Templates -->
 	
-	<script id='dockPanelTest' type='text/xml'>
+	<script id='dockPanelTest' type='application/xml'>
 		<dockpanel fillLast='false' width='500' height='500' background='Orange'>
 			<resourcecollection>
 				<styletemplate key='borderStyle'>
@@ -65,7 +65,7 @@
 	</script>
 	
 	
-	<script id='horizontalTest' type='text/xml'>
+	<script id='horizontalTest' type='application/xml'>
 		<grid height='500' background='Orange'>
 			<columndefinitions>
 				<columndefinition width='auto' />
@@ -78,7 +78,7 @@
 		</grid>
 	</script>
 	
-	<script id='gridTest' type='text/xml'>
+	<script id='gridTest' type='application/xml'>
 		<border name='borderContainer' width='500' height='500' bordercolor='Black' borderthickness='1'>
 	      <resourcecollection>
 	        <styletemplate key='borderCircle'>
@@ -149,7 +149,7 @@
 		</border>
 	</script>
 	
-	<script id='stackPanelTest' type='text/xml'>
+	<script id='stackPanelTest' type='application/xml'>
 		<stackpanel name='rootPanel' background='Orange' margin='10'>
 		  <stackpanel name='chromePanel' orientation='horizontal' halign='center' background='Yellow'>
 		    <border name='bBlack' margin='10' background='Black' width='10' height='10'></border>
@@ -170,7 +170,7 @@
 		</stackpanel>
 	</script>
 	
-	<script id='borderTest' type='text/xml'>
+	<script id='borderTest' type='application/xml'>
 		<stackpanel>
 		  <resourcecollection>
 		  	<styletemplate key='backgroundBorder'>
