fixing unit tests to work with async API.

--- a/test/tests.html
+++ b/test/tests.html
@@ -14,16 +14,16 @@
 			<resourcecollection>
 				<styletemplate key='borderStyle'>
 					<setters>
-						<stylesetter property='borderThickness' value='1' />
-						<stylesetter property='borderColor' value='Black' />
-						<stylesetter property='background' value='WhiteSmoke' />
+						<setter property='borderThickness' value='1' />
+						<setter property='borderColor' value='Black' />
+						<setter property='background' value='WhiteSmoke' />
 					</setters>
 				</styletemplate>
 				<styletemplate key='textStyle'>
 					<setters>
-						<stylesetter property='vAlign' value='center' />
-						<stylesetter property='hAlign' value='center' />
-						<stylesetter property='background' value='WhiteSmoke' />
+						<setter property='vAlign' value='center' />
+						<setter property='hAlign' value='center' />
+						<setter property='background' value='WhiteSmoke' />
 					</setters>
 				</styletemplate>
 			</resourcecollection>
@@ -83,12 +83,12 @@
 	      <resourcecollection>
 	        <styletemplate key='borderCircle'>
 	           <setters>
-	              <stylesetter property='width' value='40' />
-	              <stylesetter property='height' value='40' />
-	              <stylesetter property='background' value='Yellow' />
-	              <stylesetter property='borderColor' value='Blue' />
-	              <stylesetter property='borderThickness' value='5' />
-	              <stylesetter property='cornerRadius' value='40' />
+	              <setter property='width' value='40' />
+	              <setter property='height' value='40' />
+	              <setter property='background' value='Yellow' />
+	              <setter property='borderColor' value='Blue' />
+	              <setter property='borderThickness' value='5' />
+	              <setter property='cornerRadius' value='40' />
 	           </setters>
 	        </styletemplate>
 	      </resourcecollection>
@@ -175,10 +175,10 @@
 		  <resourcecollection>
 		  	<styletemplate key='backgroundBorder'>
 		  		<setters>
-		  			<stylesetter property='margin' value='1' />
-		  			<stylesetter property='width' value='300' />
-		  			<stylesetter property='height' value='300' />
-		  			<stylesetter property='background' value='Orange' />
+		  			<setter property='margin' value='1' />
+		  			<setter property='width' value='300' />
+		  			<setter property='height' value='300' />
+		  			<setter property='background' value='Orange' />
 		  		</setters>
 		  	</styletemplate>
 		  </resourcecollection>
