--- a/example/sandbox/sandbox.html
+++ b/example/sandbox/sandbox.html
@@ -60,6 +60,7 @@ Begin Buckshot Templates
 	     	<treenode header='TreeView' tag='treeview' />
 	     	<treenode header='DockPanel' tag='dockpanel' />
 	     	<treenode header='ListBox' tag='listbox' />
+	     	<treenode header='ModalDialog' tag='modaldialog' />
 	     	<treenode header='DropDownList' tag='dropdownlist' />
 	     	<treenode header='TextBox' tag='textbox' />
 	     	<treenode header='Slider' tag='slider' />
