--- a/example/sandbox/sandbox.html
+++ b/example/sandbox/sandbox.html
@@ -1117,6 +1117,29 @@ each list.
 </stack>
 </script>
 
+<!-- content for the ModalDialog demo -->
+<script id='modaldialog' type='application/xml'>
+<stack>
+  <textblock fontfamily='Arial' margin='0,5' text='Dialogs can host any content in the title and body.' />
+  <textbox width='400' placeholder='Including input from the user' />
+  <textblock fontfamily='Arial' margin='0,5' text='ModalDialog also supports buttons for everything from simple dialogs to multi-step wizards.' />
+  <textblock fontfamily='Arial' margin='0,5' text='Here are some examples:' />
+  <stack background='Gray' orientation='horizontal'>
+    <button content='Ok' />
+    <button content='Cancel' />
+  </stack>
+  <stack background='Gray' orientation='horizontal'>
+    <button content='Yes' />
+    <button content='No' />
+  </stack>
+  <stack background='Gray' orientation='horizontal'>
+    <button content='Next' />
+    <button content='Back' />
+    <button content='Finished' />
+  </stack>
+</stack>
+</script>
+
 <!-- content for the popup control demo -->
 <script id='popup' type='application/xml'>
 <stack margin='10'>
