updated dockpanel demo.

--- a/example/sandbox/sandbox.html
+++ b/example/sandbox/sandbox.html
@@ -168,7 +168,7 @@ Begin Buckshot Templates
    <textblock style='{resource headerText}' text='DockPanel Snaps Content To Edges' />
    <dockpanel name='dockpanelDemo' fillLast='false' width='250' height='250' background='Khaki'>
       <border background='LightGreen' cornerradius='7' padding='3' borderthickness='1' bordercolor='Black' name='btnDock'>
-         <textblock style='{resource defaultText}' halign='center' valign='center' text="I'm docked." />
+         <textblock style='{resource defaultText}' halign='center' valign='center' text="{data dockText}" />
       </border>
    </dockpanel>
    <stack orientation='horizontal'>
