changes to popup demo.

--- a/example/sandbox/sandbox.html
+++ b/example/sandbox/sandbox.html
@@ -61,7 +61,7 @@ Begin Buckshot Templates
 	     	<treenode header='DockPanel' tag='dockpanel' />
 	     	<treenode header='ListBox' tag='listbox' />
 	     	<treenode header='ModalDialog' tag='modaldialog' />
-	     	<treenode name='tn_popup_demo' header='Popup' tag='popup' />
+	     	<treenode header='Popup' tag='popup' />
 	     	<treenode header='DropDownList' tag='dropdownlist' />
 	     	<treenode header='TextBox' tag='textbox' />
 	     	<treenode header='Slider' tag='slider' />
