fixed issue during template binding of control templates. continuing work on tabcontainer control.

--- a/example/sandbox/sandbox.html
+++ b/example/sandbox/sandbox.html
@@ -57,6 +57,7 @@ Begin Buckshot Templates
 	     	<treenode header='LayoutCanvas' tag='layoutcanvas' />
 	     </treenode>
 	     <treenode header='Controls' tag=''>
+	        <treenode header='TabContainer' tag='tabcontainer' />
 	     	<treenode header='TreeView' tag='treeview' />
 	     	<treenode header='DockPanel' tag='dockpanel' />
 	     	<treenode header='ListBox' tag='listbox' />
@@ -1157,6 +1158,13 @@ each list.
    <youtube halign='center' margin="10" videoid="LOacOkmd9FI" width="300" height="200"></youtube>
    <textblock style='{resource defaultText}' text='Click in the Popup area to close it.' />
 </stack>
+</script>
+
+<script id='tabcontainer' type='application/xml'>
+<tabcontainer width='400'>
+  <tabitem />
+  <tabitem />
+</tabcontainer>
 </script>
 
 <!--
