--- a/example/sandbox/sandbox.html
+++ b/example/sandbox/sandbox.html
@@ -57,7 +57,7 @@ Begin Buckshot Templates
 	     	<treenode header='LayoutCanvas' tag='layoutcanvas' />
 	     </treenode>
 	     <treenode header='Controls' tag=''>
-	        <treenode header='TabContainer' tag='tabcontainer' />
+	        <treenode header='TabControl' tag='tabcontrol' />
 	     	<treenode header='TreeView' tag='treeview' />
 	     	<treenode header='DockPanel' tag='dockpanel' />
 	     	<treenode header='ListBox' tag='listbox' />
@@ -1160,11 +1160,11 @@ each list.
 </stack>
 </script>
 
-<script id='tabcontainer' type='application/xml'>
-<tabcontainer width='400'>
-  <tabitem />
-  <tabitem />
-</tabcontainer>
+<script id='tabcontrol' type='application/xml'>
+<tabcontrol width='400'>
+  <tabitem header='hello'/>
+  <tabitem header='world'/>
+</tabcontrol>
 </script>
 
 <!--
