more progress on TabControl. control is usable and provides some customization.

--- a/example/sandbox/sandbox.html
+++ b/example/sandbox/sandbox.html
@@ -1161,9 +1161,21 @@ each list.
 </script>
 
 <script id='tabcontrol' type='application/xml'>
-<tabcontrol width='400'>
-  <tabitem header='hello'/>
-  <tabitem header='world'/>
+<tabcontrol width='400' height='400'>
+  <tabitem header='Tab 1'>
+     <border width='100' height='100' cornerradius='100' background='Green'>
+        <textblock foreground='White' halign='center' valign='center' text='content' />
+     </border>
+  </tabitem>
+  <tabitem header='Tab 2'>
+     <textblock text='content 2' />
+  </tabitem>
+  <tabitem header='Tab 3'>
+     <textblock text='content 3' />
+  </tabitem>
+  <tabitem header='Tab 4'>
+     <textblock text='content 4' />
+  </tabitem>
 </tabcontrol>
 </script>
 
