--- a/example/starter_projects/starter_project/starter_project.html
+++ b/example/starter_projects/starter_project/starter_project.html
@@ -49,7 +49,7 @@
 			<!-- 
 			Data binding the 'text' property to a 'result' object in the view model.
 			-->
-			<textblock halign='center' margin='5' fonsize='14' fontfamily='Arial' text='{data result}' />
+			<textblock halign='center' margin='5' fontsize='14' fontfamily='Arial' text='{data result}' />
 		</stack>
 	  </border>
 	</script>
